# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# Copyright (c) 2025.

[project]
name = "mlir-wheel"
dynamic = ["version"]
requires-python = ">=3.8,<=3.14"
dependencies = [
    "numpy>=1.19.5",
    # required but no package for it...
    # "ml_dtypes>=0.5.0, <=0.6.0"
]

[project.urls]
Homepage = "https://github.com/llvm/llvm-project"
Discussions = "https://discourse.llvm.org/"
"Issue Tracker" = "https://github.com/llvm/llvm-project/issues"
"Source Code" = "https://github.com/llvm/llvm-project"

[build-system]
requires = [
    "scikit-build-core==0.10.7",
    "typing_extensions==4.12.2",
    "nanobind>=2.4, <3.0",
    "pybind11>=2.10.0, <=2.13.6",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
experimental = true
metadata.version.provider = "version"
metadata.version.provider-path = "."

minimum-version = "0.10"
build-dir = "build"
cmake.source-dir = "../../third_party/llvm-project/llvm"
build.targets = ["install-mlirdevelopment-distribution"]
install.components = ["install-mlirdevelopment-distribution"]

cmake.args = ["-C", "llvm_wasm_cache.cmake"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = { env = "CMAKE_BUILD_TYPE", default = "Release" }
CMAKE_C_COMPILER_LAUNCHER = { env = "CMAKE_C_COMPILER_LAUNCHER", default = "" }
CMAKE_CXX_COMPILER_LAUNCHER = { env = "CMAKE_CXX_COMPILER_LAUNCHER", default = "" }
# https://github.com/emscripten-core/emscripten/issues/25911
# https://github.com/pyodide/pyodide/blob/7f2feb1a673b7b610cf17bfc8a48727687843cd3/docs/development/abi.md?plain=1#L40C34-L40C49
# Linking a shared libraries with `-sSIDE_MODULE=1` will pass `-whole-archive` to
#`wasm-ld` and so force inclusion of all object files and all symbols. Linking
# with `-sSIDE_MODULE=2` will only include symbols that are explicitly listed with
#`-sEXPORTED_FUNCTIONS=<export list>`. The name of each symbol in the list must
# be prefixed with an underscore.
# https://github.com/emscripten-core/emscripten/blob/04fda5c8e488985bd5825a11e21373316dd133e4/site/source/docs/getting_started/FAQ.rst?plain=1#L461-L463
# https://github.com/pyodide/pyodide/blob/7f2feb1a673b7b610cf17bfc8a48727687843cd3/docs/development/abi.md

#CMAKE_C_FLAGS = "-sLINKABLE -Wl,-allow-multiple-definition"
#CMAKE_CXX_FLAGS = "-sLINKABLE -Wl,-allow-multiple-definition"
CMAKE_C_FLAGS = "-sLINKABLE"
CMAKE_CXX_FLAGS = "-sLINKABLE"
CMAKE_EXE_LINKER_FLAGS = "-sALLOW_TABLE_GROWTH -sASSERTIONS -sWASM_BIGINT"
CMAKE_SHARED_LINKER_FLAGS = "-sALLOW_TABLE_GROWTH -sASSERTIONS -sWASM_BIGINT"
CMAKE_MODULE_LINKER_FLAGS = "-sALLOW_TABLE_GROWTH -sASSERTIONS -sWASM_BIGINT"
# De-duplicate libraries on link lines based on linker capabilities.
# minimum cmake version is 3.29
CMAKE_POLICY_DEFAULT_CMP0156 = "NEW"
CMAKE_VERBOSE_MAKEFILE = "ON"

# so that NATIVE doesn't try to get built
LLVM_NATIVE_TOOL_DIR = { env = "LLVM_NATIVE_TOOL_DIR", default = "" }
LLVM_TABLEGEN = { env = "LLVM_TABLEGEN", default = "" }
MLIR_LINALG_ODS_YAML_GEN = { env = "MLIR_LINALG_ODS_YAML_GEN", default = "" }
MLIR_TABLEGEN = { env = "MLIR_TABLEGEN", default = "" }
