[build-system]
requires = ["scikit-build-core>=0.10.7", "nanobind>=2.2.0", "typing_extensions>=4.12.2"]
build-backend = "scikit_build_core.build"

[project]
name = "eudsl-tblgen"
version = "0.0.1"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/llvm/eudsl"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
cmake.source-dir = "src"

[tool.scikit-build.cmake.define]
LLVM_DIR = {env="LLVM_DIR", default="EMPTY"}
CMAKE_CXX_VISIBILITY_PRESET = "hidden"

[tool.cibuildwheel]
build-verbosity = 1
skip = ["*-manylinux_i686", "*-musllinux*", "*-pypy*"]
manylinux-x86_64-image = "manylinux_2_28"
environment-pass = [
    "LLVM_DIR",
    "CMAKE_GENERATOR"
]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
